<resources>
    <string name="app_name">Travel Journal</string>
    <string name="title_activity_journals">Journals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_map">Map</string>
    <string name="menu_my_journals">My Journals</string>
    <string name="menu_profile">Profile</string>
    <string name="searchHint">Search Journals Here</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="edit_post">Edit Post</string>
    <string name="title_activity_login">Login</string>
    <string name="read_journal">Read Journal</string>
    <string name="activity_login">Login</string>
</resources>
