<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="hu.bme.aut.android.traveljournal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="hu.bme.aut.android.traveljournal.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_my_journals"
        android:name="hu.bme.aut.android.traveljournal.ui.my_journals.MyJournalsFragment"
        android:label="@string/menu_my_journals"
        tools:layout="@layout/fragment_my_journals" />

    <fragment
        android:id="@+id/nav_edit_journal"
        android:name="hu.bme.aut.android.traveljournal.ui.journal_detailed.EditJournalFragment"
        android:label="@string/edit_journal"
        tools:layout="@layout/fragment_edit_journal" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="hu.bme.aut.android.traveljournal.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>